# injecto

./: Cargo.toml
example/: Cargo.toml
example/src/: main.rs
macro/: Cargo.toml
macro/src/: lib.rs  module.rs
macro/src/module/: input.rs  output.rs
src/: lib.rs
