[package]
name = "injecto-macro"
version = "0.1.0"
edition = "2021"
authors = ["Igor Tatarkin <igrtatarkin@gmail.com>"]
description = "Di macro"
readme = "../README.md"
repository = "https://github.com/xy1qw/injecto"
license-file = "../LICENSE"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = { version = "2.0.87", features = ["full"] }
